<resources>
    <string name="privacy_policy_link">https://github.com/EvgenSuit/PrivacyPolicies/blob/master/My%20Speechy%20Privacy%20Policy.md</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="app_name">My Speechy</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="mark_as_complete">"Mark as complete"</string>
    <string name="meditation_notification_name">Meditation</string>
    <string name="meditation_notification_channel">1</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="update_auth_option">Update auth option</string>
    
    <string name="email_auth_field_click_label">Email</string>
    <string name="password_auth_field_click_label">Password</string>

    <string name="username">Username</string>
    <string name="email_not_valid">Email is of a wrong format</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="email_is_empty">"Email is empty"</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_is_not_mixed_case">Password must contain mixed letters</string>
    <string name="password_is_not_long_enough">Password must be at least 8 characters long</string>
    <string name="password_not_enough_digits">Password must contain at least 1 digit</string>
    <string name="waiting_for_auth">Waiting for auth</string>

    <string name="back_button">Back button</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="cancel_button">Cancel</string>

    <string name="your_chats">Your chats</string>
    <string name="all_groups">All groups</string>
    <string name="add_public_chat">Add public chat</string>
    <string name="create_or_change_chat_form">Create or change public chat</string>
    <string name="create_or_change_chat_button">Create or change chat button</string>

    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="search_for_public_chats">Search for public chats</string>
    <string name="leave_chat">Leave chat</string>
    <string name="custom_alert_dialog">Custom alert dialog</string>
    <string name="custom_alert_dialog_confirm">Confirm</string>
    <string name="custom_alert_dialog_cancel">Cancel</string>
    <string name="load_screen">Load screen</string>
    <string name="main_screen_content">Main screen content</string>
    <string name="lesson_item">Lesson item</string>
    <string name="empty_username">empty username</string>
    <string name="deleted_account">Deleted account</string>
    <string name="questions_column">Questions column</string>
    <string name="thoughts_column">Thoughts column</string>
    <string name="thoughts_text_field">Thoughts text field</string>

    <string name="thought_tracker">Thought tracker</string>
    <string name="write_down_thought_tracker_experience">Write down any experience you have had</string>
    <string name="done">Done</string>
    <string name="circular_progress_indicator">Circular progress indicator</string>

    <string name="toggle_theme">Toggle theme</string>

    <string name="thought_tracker_description">Thought Tracker is like your personal journal. With it you can go back in time and see how you felt. The data you produce is yours only</string>
</resources>