...
                                    color = Color.Black)
                            }
                        }
                        Text("${round(uiState.sliderPosition * 10) / 10}x",
                            color = Color.White,
                            fontSize = 20.sp)
                        Slider(value = uiState.sliderPosition,
                            onValueChange = viewModel::changeSliderPosition,
                            valueRange = 1f..2f,
                            colors = SliderDefaults.colors(
                                thumbColor = Color.White,
                                activeTrackColor = Color.Green
                            ),
...
