...
        if (started) {
            Text(
                passedTime.seconds.toString(),
                color = Color.White, fontSize = 35.sp
            )
        }
            TimeScroller(
                started,
                viewModel::setMeditationTime
            )
        Spacer(modifier = Modifier.height(40.dp))
        AnimatedContent(started,
            modifier = Modifier.absolutePadding(top = 20.dp)) { started ->
...
